--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,9 +21,9 @@
         </div>
       </div>
     </div>
-    <div class="row flex-fill">
+    <div class="row flex h-50">
       <div class="col d-flex flex-column">
-        <div class="content-2 h-100">
+        <div class="content-2 mt-7">
           <h1>Community Camping 2023</h1>
         </div>
       </div>
@@ -31,6 +31,7 @@
     <div class="row">
       <div class="col">
         <div class="content-3">
+          <h1>25.08. - 03.09. </h1>
         </div>
       </div>
     </div>
