--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col">
         <div class="content-3">
-          <h1>25.08. - 03.09. </h1>
+          <h1>{{ countdown }}</h1>
         </div>
       </div>
     </div>
