--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,24 +14,22 @@
   </div>
 </section>
 <section>
-  <div class="container container-fluid d-flex flex-column text-center">
-    <div class="row h-25">
-      <div class="col">
-        <div class="content-1">
+  <div class="container container-fluid d-flex flex-column text-center justify-content-center">
+    <div class="content">
+      <div class="row">
+        <div class="col d-flex flex-column">
+          <div class="content-2 mt-7">
+            <h1>Community Camping 2024</h1>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row flex h-50">
-      <div class="col d-flex flex-column">
-        <div class="content-2 mt-7">
-          <h1>Community Camping 2023</h1>
-        </div>
+      <div class="row dummy">
       </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="content-3">
-          <h1>{{ countdown }}</h1>
+      <div class="row">
+        <div class="col">
+          <div class="content-3">
+            <h1>{{ countdown }}</h1>
+          </div>
         </div>
       </div>
     </div>
