--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,12 +7,12 @@
   z-index: -1
 
 .starburst img
-      position: absolute
-      max-height: 50%
-      width: auto
-      left: 50%
-      top: 50%
-      transform: translate(-50%,-50%)
+  position: absolute
+  max-height: 50%
+  width: auto
+  left: 50%
+  top: 50%
+  transform: translate(-50%,-50%)
 
 .outer
   width: 100%
@@ -50,7 +50,9 @@
   $dark-color: #E7FC73
   background: linear-gradient(180deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(170deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(160deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(150deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(140deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(130deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(120deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(110deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(100deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(90deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(80deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(70deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(60deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(50deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(40deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(30deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(20deg, transparent 50%, $dark-color 50%, $dark-color 100%), linear-gradient(10deg, transparent 50%, $light-color 50%, $light-color 100%), linear-gradient(0deg, transparent 50%, $dark-color 50%, $dark-color 100%)
 
-
 .container
   width: 100%
   height: 100vh
+
+.dummy
+  height: 500px
